home: Set CHANGELOG link to new release

--- a/layouts/index.hbs
+++ b/layouts/index.hbs
@@ -25,7 +25,7 @@
 
                 <ul class="list-divider-pipe home-secondary-links">
                     <li><a href="https://nodejs.org/dist/latest/">{{ labels.other-downloads }}</a></li>
-                    <li><a href="https://github.com/nodejs/node-v0.x-archive/blob/master/ChangeLog">{{ labels.changelog }}</a></li>
+                    <li><a href="https://github.com/nodejs/node/blob/master/CHANGELOG.md">{{ labels.changelog }}</a></li>
                     <li><a href="{{ site.docs.api.link }}">{{ labels.api }}</a></li>
                 </ul>
 
