download: Add note about io.js

--- a/layouts/download-releases.hbs
+++ b/layouts/download-releases.hbs
@@ -10,14 +10,12 @@
             <article>
                 <h1>Previous Releases</h1>
 
-                {{!--
                 <section>
-                    <h2 class="download-headline-icon">io.js & node.js</h2>
+                    <h2>io.js & node.js</h2>
                     <p>
                         {{iojs.intro}}
                     </p>
                 </section>
-                --}}
 
                 <section>
                     <table class="download-table full-width" cellspacing="0" border="0" cellpadding="0">
