--- a/layouts/css/base.styl
+++ b/layouts/css/base.styl
@@ -73,6 +73,7 @@ pre
 @import 'page-modules/_footer'
 @import 'page-modules/_home'
 @import 'page-modules/_blog-index'
+@import 'page-modules/_blog-post'
 @import 'page-modules/_foundation-members'
 @import 'page-modules/_download'
 @import 'page-modules/_scrollToTop'
