fix css error and move styles into own file

--- a/layouts/css/base.styl
+++ b/layouts/css/base.styl
@@ -75,6 +75,7 @@ pre
 @import 'page-modules/_blog-index'
 @import 'page-modules/_blog-post'
 @import 'page-modules/_foundation-members'
+@import 'page-modules/_in-the-news'
 @import 'page-modules/_download'
 @import 'page-modules/_scrollToTop'
 
