interactive banner text drop shadow
Signed-off-by: Csaba Palfi <csaba@palfi.me>

--- a/layouts/index.hbs
+++ b/layouts/index.hbs
@@ -48,6 +48,8 @@
                     vertical-align: center;
                     padding-top:80px;
                     height:140px;
+                    -webkit-filter: drop-shadow(5px 5px 5px #222);
+                    filter: drop-shadow(5px 5px 5px #222);
                 }
                 footer {
                     margin-top:0px;
