Update Node.js Project Licensing Information

--- a/layouts/partials/footer.hbs
+++ b/layouts/partials/footer.hbs
@@ -10,7 +10,7 @@
             <p>Linux Foundation is a registered trademark of The Linux Foundation.</p>
             <p>Linux is a registered <a href="http://www.linuxfoundation.org/programs/legal/trademark" title="Linux Mark Institute">trademark</a> of Linus Torvalds.</p>
             <p>
-               <a href="https://raw.github.com/joyent/node/master/LICENSE">Node.js Project Licensing Information</a>.
+               <a href="https://raw.githubusercontent.com/nodejs/node/master/LICENSE">Node.js Project Licensing Information</a>.
             </p>
         </div>
     </div>
