Add notice about API docs of previous releases

--- a/layouts/css/base.styl
+++ b/layouts/css/base.styl
@@ -148,3 +148,12 @@ pre
 
 .pad-bottom-small
     padding-bottom 1em
+
+.highlight-box
+    background-color #f0f0f0
+    padding 5px 15px
+    border-radius 2px
+    margin-top 1em
+
+    & *:first-child
+        margin-top 0.5rem
