--- a/layouts/partials/footer.hbs
+++ b/layouts/partials/footer.hbs
@@ -4,7 +4,11 @@
 
     <div class="linuxfoundation-footer">
         <div class="container">
-            <a class="linuxfoundation-logo" href="http://collabprojects.linuxfoundation.org">Linux Foundation Collaborative Projects</a>
+            <div class="issue-link-container">
+                <a class="issue-link" href="https://github.com/nodejs/new.nodejs.org/issues">{{i18n.reportIssue}}</a>
+                <a class="linuxfoundation-logo" href="http://collabprojects.linuxfoundation.org">Linux Foundation Collaborative Projects</a>
+            </div>
+
             <p>© 2015 Node.js Foundation. All Rights Reserved. Portions of this site originally © 2015 Joyent. </p>
             <p>Node.js is a trademark of Joyent, Inc. and is used with its permission. Please review the Trademark Guidelines of the Node.js Foundation <a href="/static/documents/trademark-policy.pdf">here</a>.</p>
             <p>Linux Foundation is a registered trademark of The Linux Foundation.</p>
