--- a/layouts/partials/footer.hbs
+++ b/layouts/partials/footer.hbs
@@ -5,7 +5,10 @@
     <div class="linuxfoundation-footer">
         <div class="container">
             <div class="issue-link-container">
-                <a class="issue-link" href="https://github.com/nodejs/new.nodejs.org/issues">{{i18n.reportIssue}}</a>
+                <ul class="list-divider-pipe issue-link">
+                    <li><a href="https://github.com/nodejs/node/issues">{{i18n.reportNodeIssue}}</a></li>
+                    <li><a href="https://github.com/nodejs/new.nodejs.org/issues">{{i18n.reportWebsiteIssue}}</a></li>
+                </ul>
                 <a class="linuxfoundation-logo" href="http://collabprojects.linuxfoundation.org">Linux Foundation Collaborative Projects</a>
             </div>
 
