changed date format on blog

--- a/layouts/blog-index.hbs
+++ b/layouts/blog-index.hbs
@@ -12,7 +12,7 @@
                 {{#each collections.blog}}
                     {{#if title}}
                         <li>
-                            <time datetime="{{ date }}">{{ strftime date }}</time>
+                            <time datetime="{{ date }}">{{ strftime date "%d %b %y" }}</time>
                             <a href="/{{../../site.locale}}/{{ path }}/">{{ title }}</a>
                         </li>
                     {{/if}}
