fix style foundantion-announcements

--- a/layouts/announcements.hbs
+++ b/layouts/announcements.hbs
@@ -5,7 +5,7 @@
 <body>
     {{> header }}
 
-    <main>
+    <div id="main">
         <div class="container has-side-nav">
 
             <aside>
@@ -28,7 +28,7 @@
                 </ul>
             </aside>
 
-            <main>
+            <article>
                 <div class="container">
 
                     <ul class="blog-index">
@@ -43,10 +43,10 @@
                     </ul>
 
                 </div>
-            </main>
+            </article>
 
         </div>
-    </main>
+    </div>
 
     {{> footer }}
 </body>
