Add: Code + Learn page in Get Involved section

--- a/layouts/contribute.hbs
+++ b/layouts/contribute.hbs
@@ -13,6 +13,9 @@
                     <li{{#equals path site.getinvolved.link}} class="active"{{/equals}}>
                         <a href="/{{site.locale}}/{{site.getinvolved.link}}/">{{site.getinvolved.text}}</a>
                     </li>
+                    <li{{#equals path site.getinvolved.code-and-learn.link}} class="active"{{/equals}}>
+                        <a href="/{{site.locale}}/{{site.getinvolved.code-and-learn.link}}/">{{site.getinvolved.code-and-learn.text}}</a>
+                    </li>
                     <li{{#equals path site.getinvolved.contribute.link}} class="active"{{/equals}}>
                         <a href="/{{site.locale}}/{{site.getinvolved.contribute.link}}/">{{site.getinvolved.contribute.text}}</a>
                     </li>
