fix logo dimension in interactive banner with mediaqueries for mobile version

--- a/layouts/index.hbs
+++ b/layouts/index.hbs
@@ -50,6 +50,13 @@
                     -webkit-filter: drop-shadow(5px 5px 5px #222);
                     filter: drop-shadow(5px 5px 5px #222);
                 }
+                @media screen and (max-width: 550px) {
+                    div.interactive-banner img {
+                        padding-top:100px;
+                        height: auto;
+                        width: 300px;
+                    }
+                }
                 footer {
                     margin-top:0px;
                 }
