Moved events into its own page

--- a/layouts/contribute.hbs
+++ b/layouts/contribute.hbs
@@ -22,6 +22,9 @@
                     <li{{#equals path site.getinvolved.development.link}} class="active"{{/equals}}>
                         <a href="/{{site.locale}}/{{site.getinvolved.development.link}}/">{{site.getinvolved.development.text}}</a>
                     </li>
+                    <li{{#equals path site.getinvolved.events.link}} class="active"{{/equals}}>
+                        <a href="/{{site.locale}}/{{site.getinvolved.events.link}}/">{{site.getinvolved.events.text}}</a>
+                    </li>
                 </ul>
             </aside>
 
