Made code spans more visible

--- a/layouts/css/base.styl
+++ b/layouts/css/base.styl
@@ -51,8 +51,9 @@ img
 
 
 code
-    color $darkgray
-
+    background-color #f2f2f2
+    font-size 85%
+    padding 0.2em
 
 pre
     background-color $node-gray
