Fix code fragment background color, closes #151

--- a/layouts/css/base.styl
+++ b/layouts/css/base.styl
@@ -63,6 +63,7 @@ pre
 
     code
         color #f0f0f0
+        background-color inherit
 
 // Import specific page sections and layout parts
 @import 'layout/_sticky-footer'
