--- a/layouts/download-releases.hbs
+++ b/layouts/download-releases.hbs
@@ -25,6 +25,7 @@
                                 <td>Date</td>
                                 <td>V8</td>
                                 <td>npm</td>
+                                <td>NODE_MODULE_VERSION</td>
                                 <td></td>
                             </tr>
                         </thead>
@@ -35,6 +36,7 @@
                                     <td data-label="Date"><time>{{date}}</time></td>
                                     <td data-label="V8">{{v8}}</td>
                                     <td data-label="npm">{{npm}}</td>
+                                    <td data-label="NODE_MODULE_VERSION">{{modules}}</td>
                                     <td class="download-table-last">
                                         <a href="{{url}}">
                                             {{i18n 'releases.downloads'}}
