Add API Documentation links to previous versions table.

--- a/layouts/download-releases.hbs
+++ b/layouts/download-releases.hbs
@@ -42,6 +42,9 @@
                                         <a href="{{changeloglink version}}">
                                             {{i18n 'links.pages.changelog'}}
                                         </a>
+                                        <a href="{{apidocslink version}}">
+                                            {{i18n 'docs.text'}}
+                                        </a>
                                     </td>
                                 </tr>
                             {{/project.versions}}
