Add "Installing Node.js via package manager"

--- a/layouts/css/page-modules/_download.styl
+++ b/layouts/css/page-modules/_download.styl
@@ -26,6 +26,8 @@
                 color $node-green
 
 .download-matrix
+    margin-bottom 1.5rem
+
     th
         text-align left
         width 33%
