Add proper color for a:hover code

--- a/layouts/css/base.styl
+++ b/layouts/css/base.styl
@@ -31,6 +31,10 @@ a:hover
     color #fff
     background-color $node-green
 
+a:hover
+    code
+        color #CC2828
+
 a.imagelink:hover
     background-color transparent
 
