--- a/layouts/download.hbs
+++ b/layouts/download.hbs
@@ -16,7 +16,7 @@
                     <div class="download-hero full-width">
                         <ul class="no-padding">
                             <li>
-                                <a href="https://nodejs.org/dist/{{project.currentVersion}}/node-{{project.currentVersion}}-x86.msi">
+                                <a href="https://nodejs.org/dist/{{project.currentVersion}}/node-{{project.currentVersion}}-x86.msi" id="windows-downloadbutton" data-version="{{ project.currentVersion }}">
                                     <img src="/static/images/platform-icon-win.png" height="50" width="45" alt="">
                                     Windows Installer
                                     <p class="small color-lightgray pad-bottom-small">node-{{project.currentVersion}}-x86.msi</p>
@@ -137,5 +137,6 @@
     </div>
 
     {{> footer }}
+    <script src="/static/js/download.js" async defer></script>
 </body>
 </html>
