--- a/layouts/download-releases.hbs
+++ b/layouts/download-releases.hbs
@@ -25,7 +25,7 @@
                                 <td>Date</td>
                                 <td>V8</td>
                                 <td>npm</td>
-                                <td>NODE_MODULE_VERSION</td>
+                                <td>Modules</td>
                                 <td></td>
                             </tr>
                         </thead>
@@ -36,7 +36,7 @@
                                     <td data-label="Date"><time>{{date}}</time></td>
                                     <td data-label="V8">{{v8}}</td>
                                     <td data-label="npm">{{npm}}</td>
-                                    <td data-label="NODE_MODULE_VERSION">{{modules}}</td>
+                                    <td data-label="Modules">{{modules}}</td>
                                     <td class="download-table-last">
                                         <a href="{{url}}">
                                             {{i18n 'releases.downloads'}}
@@ -49,6 +49,7 @@
                             {{/project.versions}}
                         </tbody>
                     </table>
+                    <p id="modules-description">{{modules}}</p>
                 </section>
             </article>
 
