wrap in code block

--- a/layouts/download-releases.hbs
+++ b/layouts/download-releases.hbs
@@ -49,7 +49,7 @@
                             {{/project.versions}}
                         </tbody>
                     </table>
-                    <p id="modules-description">{{modules}}</p>
+                    <p id="modules-description">{{{modules}}}</p>
                 </section>
             </article>
 
