--- a/layouts/css/base.styl
+++ b/layouts/css/base.styl
@@ -85,6 +85,7 @@ pre
 @import 'page-modules/_in-the-news'
 @import 'page-modules/_download'
 @import 'page-modules/_scrollToTop'
+@import 'page-modules/_anchorLinks'
 
 .intro
     margin-top 140px
