Add auto-generated index to knowledge base

--- a/layouts/docs.hbs
+++ b/layouts/docs.hbs
@@ -13,6 +13,9 @@
                     <li{{#equals path site.docs.link}} class="active"{{/equals}}>
                         <a href="/{{site.locale}}/{{site.docs.link}}/">{{site.docs.text}}</a>
                     </li>
+                    <li{{#equals path site.docs.knowledge.link}} class="active"{{/equals}}>
+                        <a href="/{{site.locale}}/{{site.docs.knowledge.link}}/">{{site.docs.knowledge.text}}</a>
+                    </li>
                     <li{{#equals path site.docs.es6.link}} class="active"{{/equals}}>
                         <a href="/{{site.locale}}/{{site.docs.es6.link}}/">{{site.docs.es6.text}}</a>
                     </li>
