Resolved full name of release author in release blog.
In our release blog posts, we want to display the
full name of the dev who cut the release, instead
of the github login such as `rvagg` or `Fishrock123`.

These changes fixes that by resolving the full name
via github's API, based on their github login
specified in the in the changelog.

--- a/scripts/release.hbs
+++ b/scripts/release.hbs
@@ -5,6 +5,7 @@ category: release
 title: Node v{{version}} (Stable)
 slug: node-v{{versionSlug}}-stable
 layout: blog-post.hbs
+author: {{author}}
 ---
 
 {{changelog}}
