--- a/scripts/release.hbs
+++ b/scripts/release.hbs
@@ -2,8 +2,8 @@
 date: {{date}}
 version: {{version}}
 category: release
-title: Node v{{version}} (Stable)
-slug: node-v{{versionSlug}}-stable
+title: Node v{{version}} ({{versionPolicy}})
+slug: node-v{{versionSlug}}
 layout: blog-post.hbs
 author: {{author}}
 ---
