--- a/layouts/download-stable.hbs
+++ b/layouts/download-stable.hbs
@@ -10,20 +10,17 @@
             <article>
                 <div class="download-header">
                     <h1>{{downloads.headline}}</h1>
-
-                    {{#if project.currentVersions.stable}}
                     <ul class="list-divider-pipe">
                         <li>
-                            <a href="/{{site.locale}}/{{site.download.link}}" title="{{downloads.display-hint}} {{downloads.lts}}"><strong>{{downloads.lts}}</strong></a>
+                            <a href="/{{site.locale}}/{{site.download.link}}" title="{{downloads.display-hint}} {{downloads.lts}}">{{downloads.lts}}</a>
                         </li>
                         <li>
-                            <a href="/{{site.locale}}/{{site.download.link}}/stable" title="{{downloads.display-hint}} {{downloads.stable}}">{{downloads.stable}}</a>
+                            <a href="/{{site.locale}}/{{site.download.link}}/stable" title="{{downloads.display-hint}} {{downloads.stable}}"><strong>{{downloads.stable}}</strong></a>
                         </li>
                     </ul>
-                    {{/if}}
                 </div>
 
-                {{> download-matrix version=project.currentVersions.lts}}
+                {{> download-matrix version=project.currentVersions.stable}}
 
                 <section>
                     <h2>{{additional.headline}}</h2>
