Fix changes through handlebars update

--- a/layouts/announcements.hbs
+++ b/layouts/announcements.hbs
@@ -36,7 +36,7 @@
                             {{#if title}}
                                 <li>
                                     <time datetime="{{ date }}">{{ strftime date }}</time>
-                                    <a href="/{{../../site.locale}}/{{ path }}/">{{ title }}</a>
+                                    <a href="/{{../site.locale}}/{{ path }}/">{{ title }}</a>
                                 </li>
                             {{/if}}
                         {{/each}}
