--- a/layouts/blog-index.hbs
+++ b/layouts/blog-index.hbs
@@ -13,7 +13,7 @@
                     {{#if title}}
                         <li>
                             <time datetime="{{ date }}">{{ strftime date "%d %b %y" }}</time>
-                            <a href="/{{../../site.locale}}/{{ path }}/">{{ title }}</a>
+                            <a href="/{{../site.locale}}/{{ path }}/">{{ title }}</a>
                         </li>
                     {{/if}}
                 {{/each}}
