move index page style block into stylus files
move interactive banner styles into new stylus file
add parameter to footer partial on homepage so it has a specific html class attribute and has specific css applied only on that page

--- a/layouts/css/page-modules/_footer.styl
+++ b/layouts/css/page-modules/_footer.styl
@@ -12,6 +12,9 @@ footer
         background-color transparent
         text-decoration underline
 
+    &.no-margin-top
+        margin-top 0px
+
 
 .footer-nav
     display flex
