Knowledge base: Some small fixes

--- a/layouts/knowledge-base-index.hbs
+++ b/layouts/knowledge-base-index.hbs
@@ -8,13 +8,15 @@
     <div id="main">
         <div class="container has-side-nav">
 
-            {{> docs-menu }}
+            {{!-- > docs-menu --}}
 
             <article>
                 {{{ contents }}}
 
                 {{#each collections.knowledgeBase}}
-                <li><a href="/{{../site.locale}}/{{ path }}/">{{ title }}</a></li>
+                    {{#startswith path 'knowledge/'}}
+                        <li><a href="/{{../site.locale}}/{{ path }}/">{{ title }}</a></li>
+                    {{/startswith}}
                 {{/each}}
             </article>
 
