--- a/layouts/foundation.hbs
+++ b/layouts/foundation.hbs
@@ -15,6 +15,10 @@
                     <li{{#equals path site.foundation.members.link}} class="active"{{/equals}}>
                         <a href="/{{site.locale}}/{{site.foundation.members.link}}/">{{site.foundation.members.text}}</a>
                     </li>
+                    <li{{#equals path site.foundation.board.link}} class="active"{{/equals}}>
+                        <a href="/{{site.locale}}/{{site.foundation.board.link}}/">{{site.foundation.board.text}}</a>
+                    </li>
+
                     </li>
                     <li{{#equals path site.foundation.tsc.link}} class="active"{{/equals}}>
                         <a href="/{{site.locale}}/{{site.foundation.tsc.link}}/">{{site.foundation.tsc.text}}</a>
