docs(download): add link to official Docker Image
PR-URL: #328

Close: #179

Signed-off-by: Hans Kristian Flaatten <hans.kristian.flaatten@turistforeningen.no>

--- a/layouts/partials/download-matrix.hbs
+++ b/layouts/partials/download-matrix.hbs
@@ -71,6 +71,11 @@
             </tr>
 
             <tr>
+                <th>Docker Image</th>
+                <td colspan="6"><a href="https://hub.docker.com/_/node/">Official Node.js Docker Image</a></td>
+            </tr>
+
+            <tr>
                 <th>Source Code</th>
                 <td colspan="6">
                     <a href="https://nodejs.org/dist/{{version}}/node-{{version}}.tar.gz">node-{{version}}.tar.gz</a>
