Add link to Code of Conduct from contributing section

--- a/layouts/contribute.hbs
+++ b/layouts/contribute.hbs
@@ -25,6 +25,9 @@
                     <li{{#equals path site.getinvolved.events.link}} class="active"{{/equals}}>
                         <a href="/{{site.locale}}/{{site.getinvolved.events.link}}/">{{site.getinvolved.events.text}}</a>
                     </li>
+                    <li>
+                        <a href="https://github.com/nodejs/node/blob/master/CONTRIBUTING.md#code-of-conduct">{{site.getinvolved.conduct.text}}</a>
+                    </li>
                 </ul>
             </aside>
 
