Add version toggle box to the download page

--- a/layouts/download-stable.hbs
+++ b/layouts/download-stable.hbs
@@ -20,7 +20,7 @@
                     </ul>
                 </div>
 
-                {{> download-matrix version=project.currentVersions.stable}}
+                {{> download-matrix version=project.currentVersions.stable versionTypeStable="true"}}
 
                 <section>
                     <h2>{{additional.headline}}</h2>
