--- a/layouts/download.hbs
+++ b/layouts/download.hbs
@@ -23,7 +23,7 @@
                     {{/if}}
                 </div>
 
-                {{> download-matrix version=project.currentVersions.lts}}
+                {{> download-matrix version=project.currentVersions.lts versionTypeLts="true"}}
 
                 <section>
                     <h2>{{additional.headline}}</h2>
