--- a/layouts/css/page-modules/_download.styl
+++ b/layouts/css/page-modules/_download.styl
@@ -29,7 +29,7 @@
         flex-grow 2
 
     li:first-child
-        flex-basis 120px
+        flex-basis 130px
         flex-grow 1
 
     a
@@ -60,7 +60,7 @@
 
     a
         margin 2px
-        padding 5px 0
+        padding 5px 2px
 
     a:hover, a:active, a.is-version
         color $lightgreen
