update version toggle colors

--- a/layouts/css/page-modules/_download.styl
+++ b/layouts/css/page-modules/_download.styl
@@ -63,6 +63,10 @@
         padding 5px 2px
 
     a:hover, a:active, a.is-version
+        color $node-green
+        background $darkgray
+
+    a.is-version
         color $lightgreen
         background $node-green
 
