Implemented blog post pagination.
With the new design on the blog post index,
listing all blog posts is not a viable option
anymore. This adds pagination by year and displaying
summary for the top 10 posts per page.

--- a/layouts/css/page-modules/_blog-index.styl
+++ b/layouts/css/page-modules/_blog-index.styl
@@ -1,7 +1,11 @@
 .blog-index
+    list-style none
+    padding 0
+
     time
         margin-right 1em
         color $light-gray
 
     .summary
-      font-size: 75%
+        margin-left 1em
+        font-size: 75%
