css colour reorganising
- store all colors as variables
- replaced #f2f2f2 usage with #f0f0f0 as the two shades of gray are almost identical
- remove redundant border-color property for the site menu active arrow

--- a/layouts/css/_variables.styl
+++ b/layouts/css/_variables.styl
@@ -1,13 +1,25 @@
 $body-max-width = 980px
 
+$white = #fff
+
 $node-green = #80bd01
-$lightgreen = #f1fbda
+$light-green = #f1fbda
+$hover-green = #d9ebb3
 
-$node-gray  = #333
-$darkgray   = #666
-$lightgray  = #999
+$hover-red = #CC2828
 
-$border-color = #c0c0c0
+$node-gray = #333
+$dark-gray = #666
+$light-gray = #999
+$gray1 = #ccc
+$gray2 = #c0c0c0
+$gray3 = #ddd
+$gray4 = #eee
+$gray5 = #f0f0f0
+
+$black = #000
+$black2 = #222
+$black3 = #404042
 
 padded-link($padding)
     padding-left $padding
