--- a/layouts/css/page-modules/_anchorLinks.styl
+++ b/layouts/css/page-modules/_anchorLinks.styl
@@ -1,13 +1,13 @@
 // Anchor links for page headings
 .anchor
-    color #ccc
+    color $gray1
     background none
     padding 0 .25em
 
     &:link
     &:active
     &:hover
-        color #ccc
+        color $gray1
         background inherit
 
 
