--- a/layouts/css/page-modules/_blog-post.styl
+++ b/layouts/css/page-modules/_blog-post.styl
@@ -1,5 +1,5 @@
 .blogpost-header
-    border-bottom 1px solid $border-color
+    border-bottom 1px solid $gray2
     padding-bottom 0.5rem
 
     h1
