--- a/layouts/css/page-modules/_footer.styl
+++ b/layouts/css/page-modules/_footer.styl
@@ -6,7 +6,7 @@ footer
     a,
     a:link,
     a:active
-        color #ccc
+        color $gray1
 
     a:hover
         background-color transparent
