--- a/layouts/css/page-modules/_home.styl
+++ b/layouts/css/page-modules/_home.styl
@@ -1,12 +1,12 @@
 .home-version
     padding-top 10px
     font-size 16px
-    color $darkgray
+    color $dark-gray
 
 .home-version-banner
     color $node-gray
     font-size 130%
-    background-color $lightgreen
+    background-color $light-green
     padding 5px 15px
     border-radius 2px
     margin-top 1em
@@ -39,7 +39,7 @@
     padding 0.2em 0.6em
 
     background-color $node-green
-    color #fff !important
+    color $white !important
     border-radius 2px
     font-size 30px
     font-weight 400
