--- a/layouts/css/page-modules/_interactiveBanner.styl
+++ b/layouts/css/page-modules/_interactiveBanner.styl
@@ -13,8 +13,8 @@
     margin-right auto
     padding-top 80px
     height 140px
-    -webkit-filter drop-shadow(5px 5px 5px #222)
-    filter drop-shadow(5px 5px 5px #222)
+    -webkit-filter drop-shadow(5px 5px 5px $black2)
+    filter drop-shadow(5px 5px 5px $black2)
 
 @media screen and (max-width 550px)
     .interactive-banner img
