--- a/layouts/css/page-modules/_linuxfoundation.styl
+++ b/layouts/css/page-modules/_linuxfoundation.styl
@@ -2,8 +2,8 @@
     width 100%
     padding 1em 20px
     font-size 14px
-    color #fff
-    background #404042
+    color $white
+    background $black3
 
     p + p
         margin-top 0
