--- a/layouts/css/page-modules/_scrollToTop.styl
+++ b/layouts/css/page-modules/_scrollToTop.styl
@@ -5,8 +5,8 @@ html
 #scrollToTop
     font-size 1rem
     color $node-gray
-    background-color #eee
-    border 1px solid #ddd
+    background-color $gray4
+    border 1px solid $gray3
     border-radius 2px
     position fixed
     bottom 10%
