change events lists to three column layout

--- a/layouts/css/base.styl
+++ b/layouts/css/base.styl
@@ -85,6 +85,7 @@ pre
 @import 'page-modules/_foundation-members'
 @import 'page-modules/_in-the-news'
 @import 'page-modules/_download'
+@import 'page-modules/_events'
 @import 'page-modules/_interactiveBanner'
 @import 'page-modules/_scrollToTop'
 @import 'page-modules/_anchorLinks'
